apps/app1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  rules:
  - host: do.legok8s.xyz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-app1
            port:
              number: 80
